--- a/templates/creation.html.twig
+++ b/templates/creation.html.twig
@@ -1,4 +1,4 @@
-{% extends 'collection.html.twig' %}
+{% extends 'article.html.twig' %}
 {% block body_template_classes %}{{ parent() }} creation{% endblock body_template_classes %}
 
 {% block content %}
