--- a/templates/creation.html.twig
+++ b/templates/creation.html.twig
@@ -1,9 +1,12 @@
 {% extends 'article.html.twig' %}
-{% block body_template_classes %}{{ parent() }} creation{% endblock body_template_classes %}
+{% set type = "creation" %}
+{% block template %}
+{{ parent() }}
+<!-- user/plugins/photon-{{ type }}/templates/{{ type }}.html.twig -->
+{% endblock %}
+{% block body_template_classes %}{{ parent() }} {{ type }}{% endblock body_template_classes %}
 
-{% block content %}
-  <!-- articles.html.twig -->
-
-  {{ parent() }}
-
-{% endblock content %}
+{% block schema %}
+{{ parent() }}
+{% include '_json-ld/' ~ type ~ '.html.twig' ignore missing  %}
+{% endblock schema %}
