--- a/scss/articles/_creation.scss
+++ b/scss/articles/_creation.scss
@@ -11,7 +11,9 @@ article.creation {
   // --article-hover-bg: var(--color-fg);
 
   > figure {
-    max-height: none;
+    // max-height: none;
+    max-height: 70vh;
+
     background: none;
     > img {
       object-fit: contain;
@@ -22,9 +24,12 @@ article.creation {
       &:hover {
         object-fit: none;
         // width: 200%;
-        transform: scale(3);
+        // transform: scale(2);
       }
     }
   }
 
+  > header {
+    min-height: calc(24vh - var(--header-height));
+  }
 }
