--- a/assets/creation.css
+++ b/assets/creation.css
@@ -1,13 +1,32 @@
 @charset "UTF-8";
 /* photon ✴ creation Components and Templates */
 /* articles/creation *****************************/
-article.creation > figure { max-height: 70vh; background: none; }
-article.creation > figure > img { object-fit: contain; height: 100%; max-height: 100%; transition: .5s; }
-article.creation > figure > img:hover { object-fit: none; }
-article.creation > header { min-height: calc(24vh - var(--header-height)); }
+article.creation > figure {
+  max-height: 70vh;
+  background: none;
+}
+article.creation > figure > img {
+  object-fit: contain;
+  height: 100%;
+  max-height: 100%;
+  transition: 0.5s;
+}
+article.creation > figure > img:hover {
+  object-fit: none;
+}
+article.creation > header {
+  min-height: calc(24vh - var(--header-height));
+}
 
 /* templates/creation *****************************/
-body.creation > main > article { height: calc(100vh - var(--header-height) - (var(--fitz-2) * 3)); grid-template-rows: 2fr 1fr 1fr; }
-@media (min-width: 72em) { body.creation > main > article { height: calc(100vh -  (var(--fitz-2) * 2)); } }
+body.creation > main > article {
+  height: calc(100vh - var(--header-height) - (var(--fitz-2) * 3));
+  grid-template-rows: 2fr 1fr 1fr;
+}
+@media (min-width: 72em) {
+  body.creation > main > article {
+    height: calc(100vh - (var(--fitz-2) * 2));
+  }
+}
 
 /*# sourceMappingURL=creation.css.map */
