--- a/scss/creation.scss
+++ b/scss/creation.scss
@@ -2,9 +2,9 @@
 
 // set defaults from simplest to most complex
 
-@import '../../photon/scss/_media/var-18em';
-@import '../../photon/scss/_media/functions';
-@import '../../photon/scss/_media/mixins';
+@import '../../../themes/photon/scss/_media/var-18em';
+@import '../../../themes/photon/scss/_media/functions';
+@import '../../../themes/photon/scss/_media/mixins';
 
 /* articles/creation *****************************/
 @import 'articles/creation';
