--- a/scss/creation.scss
+++ b/scss/creation.scss
@@ -2,7 +2,7 @@
 
 // set defaults from simplest to most complex
 
-@import '../../../themes/photon/scss/media';
+// @import '../../../themes/photon/scss/media';
 
 /* articles/creation *****************************/
 @import 'articles/creation';
